# claudecatraz

./: .env  .env.example  .gitattributes  .gitignore  AGENT.md  BUG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  catraz  claude-switch.py  cli.py  cliff.toml  docker-compose.yml  entrypoint.py  pyproject.toml
.claude/skills/plan-executer/: SKILL.md
.claude/skills/roast-planner/: SKILL.md
.claude/skills/roast-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: audit.yml  cli-ci.yml  compose-validate.yml  dockerfile-lint.yml  redteam-ci.yml  release.yml  squid-ci.yml  warden-ci.yml
config/: README.md  allowlist.txt  squid.conf  warden.toml
docs/: BUGS.md  RULES.md  windows-issues.md
docs/design/: TODO.md
docs/design/agentic-workflow/: 01-bootstrap-hardening.md  01-gitlab-native.md  02-forward-proxy.md  02-warden.md  03-observability.md  03-testing-redteam.md  04-cli.md  05-repackaging.md  README.md
docs/design/architecture-generalization/: 00-ideen.md  00-overview.md  01-grundregeln.md  02-befunde.md  03-guard-architektur.md  04-policy-erweiterbarkeit.md  05-agent-layer.md  06-migration.md  07-offene-verbesserungen.md  08-multi-target.md  09-endpoint-actions.md  10-actions-rework.md  11-init-doctor-endpoint-cleanup.md  12-per-host-scoping.md  13-warden-endpoint-dns-resolution.md  14-egress-allowlist-from-manifest.md  TODO.md
docs/design/catraz-init/: 01-baseimage-setup.md  02-local-dockerfile-and-inline-auth.md
docs/design/cli-worklist/: 01-remove-prune.md  02-reload-command.md  03-persist-agent-logs.md  04-list-agent-containers.md  05-collapse-up-rename-down-stop.md  06-allow-and-autodiscover.md  07-named-run-modes.md
forward-proxy/: Dockerfile  docker-entrypoint.sh
scripts/: setup-dirs.sh
src/catraz/: __init__.py  admin_client.py  agents.py  auth.py  cli.py  compose.py  doctor.py  egress_allowlist.py  endpoints.py  envfile.py  errors.py  hostfs.py  image.py  paths.py  policy.py  ui.py
tests/cli/: test_admin_client.py  test_agent_logs.py  test_allow.py  test_allow_endpoint.py  test_audit.py  test_auth.py  test_auto_sync.py  test_catraz.py  test_cli_flag_scoping.py  test_compose.py  test_compose_resolved.py  test_doctor_actions.py  test_doctor_agent.py  test_doctor_base.py  test_doctor_egress.py  test_doctor_endpoints.py  test_doctor_gitlab.py  test_doctor_mounts.py  test_egress_allowlist.py  test_endpoints.py  test_env_example.py  test_gitignore.py  test_hostfs.py  test_image.py  test_image_assets.py  test_init_egress_offer.py  test_init_from.py  test_init_migrate.py  test_init_wizard.py  test_invariants.py  test_local.py  test_paths.py  test_prune_removed.py  test_ps.py  test_reload.py  test_run.py  test_run_argv.py  test_run_base_image.py  test_run_modes.py  test_secrets.py  (+9 more)
tests/container/: conftest.py  test_adapter_conformance.py  test_build_home.py  test_claude_md.py  test_entrypoint_import.py  test_exec_mode.py  test_git_warden.py  test_local.py  test_multi_host.py  test_multi_host_actions.py  test_rc_args.py  test_run_mode.py  test_sync.py  test_workspace_uid_heal.py
tests/redteam/: test_agent_adapter.py  test_egress.sh  test_shadow_mount.py
warden/: .dockerignore  .gitignore  Dockerfile  GIT_SERVER_REFERENCE.md  README.md  docker-entrypoint.sh  pyproject.toml  serve_test.py
warden/tests/: conftest.py  test_action_catalog.py  test_api_mr_namespace.py  test_api_ownership.py  test_api_proxy.py  test_api_reconcile.py  test_api_state.py  test_app.py  test_audit.py  test_capabilities.py  test_config.py  test_context.py  test_forge.py  test_forge_state.py  test_git_e2e.py  test_git_proxy.py  test_git_reconcile.py  test_git_state.py  test_git_vocabulary.py  test_host_routing.py  test_main.py  test_pktline.py  test_pktline_robustness.py  test_policy.py  test_quota.py  test_reconcile_all.py  test_report.py  test_rules.py  test_state.py  test_toml_codec.py
warden/tests/catalog/: test_activation.py  test_config_integration.py  test_config_parse.py  test_recognizer.py  test_report.py  test_startgate.py
warden/tests/core/: test_action_gates.py  test_actions_model.py
warden/tests/gitlab/: test_recognizers.py  test_report.py
warden/tests/redteam/: test_bypass.py
warden/tests/transport/: test_actions.py  test_recognizers.py
warden/warden/: __init__.py  __main__.py  allowlist.py  api_endpoints.py  api_proxy.py  app.py  audit.py  capabilities.py  config.py  config_load.py  context.py  errors.py  git_proxy.py  model.py  path_template.py  pktline.py  policy.py  read_endpoints.py  rules.py  state.py  upstream.py
warden/warden/catalog/: __init__.py  activation.py  builtin.py  checks.py  config_parse.py  entries.py  errors.py  model.py  report.py  startgate.py
warden/warden/core/: __init__.py  actions.py  audit.py  capabilities.py  config.py  config_load.py  endpoints.py  guard.py  logging_setup.py  model.py  path_template.py  recognizer.py  rules.py  state.py  state_migrations.py  toml_codec.py  transport.py
warden/warden/guards/: __init__.py
warden/warden/guards/git/: __init__.py  actions.py  endpoints.py  errors.py  guard.py  intent.py  pktline.py  policy.py  reconcile.py  report.py  state.py
warden/warden/guards/git/gitlab/: __init__.py  actions.py  guard.py  intent.py  mr_namespace.py  parsing.py  policy.py  recognizers.py  reconcile.py  report.py  state.py
warden/warden/guards/git/transport/: __init__.py  actions.py  errors.py  guard.py  intent.py  pktline.py  policy.py  recognizers.py  reconcile.py  state.py
warden/warden/guards/gitlab/: __init__.py  forge.py  state.py  upstream.py
warden/warden/guards/gitlab_api/: __init__.py  actions.py  context.py  guard.py  intent.py  mr_namespace.py  ownership.py  parsing.py  policy.py  read_endpoints.py  reconcile.py  state.py  upstream.py
warden/warden/guards/gitlab_api/catalog/: __init__.py  activation.py  builtin.py  checks.py  config_parse.py  entries.py  errors.py  model.py  probes.py  read_endpoints.py  report.py  startgate.py  write_endpoints.py
warden/warden/static/: viewer.html
workspace/: CLAUDE.md
(+107 files in other folders)
