[project]
name = "claudecatraz"
version = "0.2.0"
requires-python = ">=3.11"
description = "Sandbox front door for an autonomous Claude Code agent."
dependencies = []

[dependency-groups]
dev = ["pytest"]

[project.scripts]
catraz = "catraz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catraz"]

[tool.hatch.build.targets.wheel.force-include]
"warden" = "catraz/assets/warden"
"forward-proxy" = "catraz/assets/forward-proxy"

[tool.pytest.ini_options]
# importlib mode lets same-basename test files coexist across dirs
# (e.g. tests/cli/test_local.py and tests/container/test_local.py).
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (require Docker + running stack)",
]
