[project]
name = "catraz"
version = "0.1.0"
requires-python = ">=3.11"
description = "Sandbox front door for an autonomous Claude Code agent."
dependencies = []

[dependency-groups]
dev = ["pytest", "mypy>=2.1.0,<3", "ruff>=0.9,<0.12"]

[project.scripts]
catraz = "catraz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catraz"]

[tool.hatch.build.targets.wheel.force-include]
"warden" = "catraz/assets/warden"
"forward-proxy" = "catraz/assets/forward-proxy"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# importlib mode lets same-basename test files coexist across dirs
# (e.g. tests/cli/test_local.py and tests/container/test_local.py).
addopts = "--import-mode=importlib"
markers = [
    "slow: marks tests as slow (require Docker + running stack)",
]

[tool.mypy]
# Strict type-checking for the CLI package and its tests. src/ is on the path
# (src layout) and explicit_package_bases + same-basename test files (importlib
# mode) need namespace packages so duplicate basenames don't collide.
files = ["src/catraz", "tests"]
# The generic container entrypoint asset and each agent adapter import each
# other by bare module name (agent_contract, git_routing) — resolved via
# sys.path at container/test runtime (§05.2: they're flattened into one
# image directory by layer.Dockerfile, never a normal package import). Adding
# their source dirs here lets mypy resolve the same names statically too.
mypy_path = "src:src/catraz/assets/container"
python_version = "3.11"
strict = true
explicit_package_bases = true
namespace_packages = true
