[project]
name = "warden"
version = "0.1.0"
description = "GitLab policy-enforcement proxy (Warden) for the Claude agent sandbox"
readme = "README.md"
requires-python = ">=3.12"
# Dependency discipline (§6.7): keep the trust boundary small and pinned.
dependencies = [
    "starlette>=0.40,<0.50",
    "httpx>=0.27,<0.29",
    "uvicorn>=0.30,<0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.30",
    "respx>=0.21,<0.23",
]

[project.scripts]
warden = "warden.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
